# MasterThesis

./: README.md
ftfootb/: CMakeLists.txt  package.xml
ftfootb_label_reading/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
ftfootb_label_reading/common/files/: detected_text_tags.xml
ftfootb_label_reading/common/files/TextLabelClassifier/haarclassifier_new/: cascade.xml  params.xml  stage0.xml  stage1.xml  stage2.xml  stage3.xml  stage4.xml
ftfootb_label_reading/common/files/TextLabelClassifier/haarclassifier_old/: haarcascade.xml
ftfootb_label_reading/common/files/TextLabelClassifier/haarclassifier_old/0/: AdaBoostCARTHaarClassifier.txt
ftfootb_label_reading/common/files/TextLabelClassifier/haarclassifier_old/1/: AdaBoostCARTHaarClassifier.txt
ftfootb_label_reading/common/files/TextLabelClassifier/haarclassifier_old/2/: AdaBoostCARTHaarClassifier.txt
ftfootb_label_reading/common/files/font/: License
ftfootb_label_reading/common/files/tag_template/: text_tag_template.docx
ftfootb_label_reading/common/files/training_data/double_number/69/: dark_1_frame0063.jpg_0000_0063_0155_0530_0097_2
ftfootb_label_reading/common/include/ftfootb_label_reading/: CreateTemplate.h  ExtractFeatures.h  FeatureRepresentation.h  LBPandHistogram.h  MatchTemplate.h  OpenCVCommon.hpp  TextTagDetection.h  TextTagLocalization.h  timer.h
ftfootb_label_reading/common/src/: ClipTagsToPortions.cpp  CreateTemplate.cpp  CreateText.cpp  CreateTrainingSampleForFeatureDescriptor.cpp  CutTagFromBackground2.cpp  DetectTextLabel.cpp  ExtractBrief.cpp  ExtractFeaturesAndReconition.cpp  ExtractLBP.cpp  Extract_HOG.cpp  FeatureRepresentation.cpp  FeatureRepresentationNode.cpp  LBPandHistogram.cpp  MatchTemplate.cpp  MatchTemplateNode.cpp  RenameTrainingSamplesForSVM.cpp  TextTagDetection.cpp  TextTagDetectionNode.cpp  TextTagLocalization.cpp  TrainingSamplesDescriptionFile.cpp  convert2XML.cpp  convert2XML_version2.cpp  detect_dashes_by_contour.cpp  histogram.cpp  histogram.hpp  lbp.cpp  lbp.hpp  performance_new.cpp  performance_new_with_hough_line_transform.cpp
ftfootb_label_reading/ros/include/ftfootb_label_reading/: read_label.h
ftfootb_label_reading/ros/launch/: read_label.launch  read_label_params.yaml
ftfootb_label_reading/ros/src/: read_label.cpp
